--- a/2 - Securité des reseaux/2.2 Analyse d'une attaque.md
+++ b/2 - Securité des reseaux/2.2 Analyse d'une attaque.md
@@ -1,1 +1,30 @@
+# Rapport d'incident de cybersécurité : Analyse des attaques réseau
 
+## Scénario
+
+Vous travaillez comme analyste de sécurité pour une agence de voyage qui fait la promotion de ses ventes et de ses promotions sur le site web de l'entreprise. Les employés de l'entreprise accèdent régulièrement à la page des ventes pour rechercher des offres de vacances pour leurs clients.
+
+Un après-midi, vous recevez une alerte automatique de votre système de surveillance signalant un problème avec le serveur web. Vous essayez de visiter le site web de l'entreprise, mais vous recevez un message d'erreur de délai d'attente de connexion dans votre navigateur.
+
+Vous utilisez un analyseur de paquets pour capturer les données en transit vers et depuis le serveur web. Vous remarquez un grand nombre de requêtes TCP SYN provenant d'une adresse IP inconnue. Le serveur web semble être submergé par le volume de trafic entrant et perd sa capacité à répondre au grand nombre de requêtes SYN anormales. Vous suspectez que le serveur est attaqué par un acteur malveillant.
+
+Vous mettez temporairement le serveur hors ligne pour qu'il puisse se rétablir et revenir à un état de fonctionnement normal. Vous configurez également le pare-feu de l'entreprise pour bloquer l'adresse IP qui envoyait ce grand nombre de requêtes SYN. Vous savez que cette solution de blocage d'IP ne durera pas longtemps, car un attaquant peut usurper d'autres adresses IP pour contourner ce blocage. Vous devez alerter rapidement votre manager de ce problème et discuter des prochaines étapes pour arrêter cet attaquant et empêcher que ce problème ne se reproduise. Vous devez être prêt à expliquer à votre responsable le type d'attaque découvert, son impact sur le serveur web et sur les employés.
+
+## Identification du type d'attaque qui a pu causer cette interruption du réseau 
+
+* Une explication potentielle du message d'erreur de délai d'attente de connexion du site web est : **attaque par déni de service (DOS)**  
+* Les journaux montrent que le serveur web cesse de répondre après avoir reçu un grand nombre de requêtes de paquets SYN  
+* Cet événement pourrait être : **attaque par inondation SYN (Syn flood attack)**
+
+## Partie 2 : Expliquer comment l'attaque cause le dysfonctionnement du site web 
+Lorsque les visiteurs du site web tentent d'établir une connexion avec le serveur web, un handcheck en 3 étapes a lieu via le protocole TCP. 
+Voici les trois étapes :
+
+| Étape | Description |
+|---|---|
+| 1 | `SYN` : Le client envoie un paquet SYN au serveur, demandant une connexion. |
+| 2 | `SYN/ACK` : Le serveur répond avec un paquet SYN/ACK, accusant réception du SYN du client et demandant une confirmation de connexion. |
+| 3 | `ACK` : Le client envoie un paquet ACK au serveur, accusant réception du SYN/ACK du serveur. |
+
+* **Expliquez ce qui se passe lorsqu'un acteur malveillant envoie un grand nombre de paquets SYN en même temps** : Cela ralentit le trafic au point où la demande échoue à être exécutée. Le serveur est submergé par le nombre de connexions qu'il doit gérer. En conséquence, il ne reste plus de ressources pour traiter les demandes de connexion TCP légitimes.  
+* **Expliquez ce que montrent les journaux et comment cela affecte le serveur** : Le serveur est surchargé et incapable de recevoir de nouveaux visiteurs. De plus, ces nouveaux visiteurs recevront un message d'erreur de délai d'attente de connexion.
